--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,103 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:wght@400;500;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+}
+
+body {
+    background-color: #1C1C1C;
+}
+
+.hed {
+    background-color: #525252;
+    padding-bottom: 10px;
+    padding-top: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    gap: 25px;
+    margin-left: 55%;
+    font-family: "Poppins", sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: antiquewhite;
+}
+
+.inicio {
+    background-image: url(../assets/fundoInicioGrupo\ \(1\).jpg);
+    height: 100vh;
+    align-content: center;
+    justify-items: center;
+}
+
+.cadInicio {
+    background-color: #423f3f73;
+    text-align: center;
+    padding: 35px 35px;
+    border-radius: 32px;
+    width: 50%;
+}
+
+.todo {
+    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 60px;
+    font-weight: 200;
+
+}
+
+.timao {
+    color: white;
+    font-family: "Chakra Petch", sans-serif;
+    font-size: 55px;
+    font-weight: 800;
+}
+
+p {
+    color: white;
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 12px;
+}
+
+.btn-cad {
+    border: 3px solid black;
+    background-color: #d9d9d900;
+    border-radius: 50px;
+    padding: 8px 25px;
+    color: white;
+    font-size: 20px;
+}
+
+.btn-log {
+    border: 2px solid rgb(255, 255, 255);
+    background-color: #d9d9d900;
+    border-radius: 50px;
+    padding: 8px 48px;
+    color: white;
+    font-size: 20px;
+}
+
+.hist {
+    display: flex;
+    align-items: center;
+    
+}
+
+.textLamp {
+    font-family: "Chakra Petch", sans-serif;
+    font-size: 35px;
+    text-align: center;
+}
+
+.texto {
+    padding: 80px;
 }
