--- a/public/style/style.css
+++ b/public/style/style.css
@@ -3,17 +3,23 @@
 body{
    font-family: 'Poppins', sans-serif;
    background-color: #0F0F0F;
+   padding-top: 120px;
 }
 header{
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: #121212;
     width: 100%;
     height: 120px;
-    justify-content: space-between;
+    display: flex;
+    align-items: center;
     z-index: 1000;
 }
 
 .nav-container{
     display: flex; /*Para poder colocar o conteúdo todo em uma linha*/
+    align-items: center;
     width: 90%;
     justify-content: space-between;     /*Coloca a logo pra esquerda e o menu na direita*/
     margin: 0 auto;
@@ -49,9 +55,105 @@ header{
     color: rgb(165, 5, 5);
     transition: 0.3s;
 }
-.titulo{
+
+#jogadores{
+    scroll-margin-top: 140px; /* altura do header + folga */
+}
+
+
+.page-title{
     text-align: center;
     font-weight: bold;
     font-size: 22px;
     color: #ffff;
+    margin-top: 40px;
+}
+
+.card-jogador{
+    width: 100%;
+    padding: 30px 0;
+}
+.cards-container{
+    width: 90%;
+    max-width: 1400px;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 28px;
+}
+
+.card{
+    background-color: #121212;
+    border-radius: 16px;
+    height: 380px;
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+
+    transform: translateY(0px);
+    transition: 0.3s;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
+}
+.card:hover{
+    transform: translateY(-6px);
+}
+.card-info{
+    margin-top: auto;
+    padding-top: 4px;
+
+    text-align: center;
+    color: #ffff;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-info h3{
+    margin: 10px 0 4px;
+    font-size: 18px;
+    font-weight: 600;
+}
+.card-info p{
+    margin: 0 0 12px;
+    font-size: 14px;
+    color: #bdbdbd;
+}
+.card-img {
+    height: 270px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(1.05);
+}
+.card-img img {
+    max-height: 100%;
+    width: auto;
+    object-fit: contain;
+}
+
+.btn-avaliar{
+    background-color: #a50505;
+    border: none;
+    border-radius: 6px;
+    padding: 8px 20px;
+    margin-top: 8px;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s;
+    opacity: 0;
+    transform: translateY(6px);
+}
+.card:hover .btn-avaliar{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.btn-avaliar:hover{
+    background-color: #d40707;
 }
