--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:wght@400;500;600;700&display=swap');
 
 * {
     margin: 0;
@@ -9,14 +9,19 @@ body {
     background-color: #1C1C1C;
 }
 
+/*HEADER*/
 .hed {
-    background-color: #525252;
-    padding-bottom: 10px;
-    padding-top: 6px;
+    background-color: #52525241;
+    width: 100%;
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: center;
-    justify-items: center
+    justify-items: center;
+    position: fixed;
+    z-index: 9999;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 ul {
@@ -27,11 +32,27 @@ ul {
     font-family: "Poppins", sans-serif;
 }
 
-a {
-    text-decoration: none;
-    color: antiquewhite;
+.lista:hover {
+    color: #c03737;
 }
 
+.btn-entrar {
+    background-color: #c03737;
+    border-radius: 12px;
+    padding: 8px 16px;
+}
+
+.btn-entrar:hover {
+    color: white;
+    background-color: rgb(82, 5, 5);
+}
+
+a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+/*SEÇÃO DA TELA INICIAL*/
 .inicio {
     background-image: url(../assets/fundoInicioGrupo\ \(1\).jpg);
     height: 100vh;
@@ -52,7 +73,6 @@ a {
     font-family: "Poppins", sans-serif;
     font-size: 60px;
     font-weight: 200;
-
 }
 
 .timao {
@@ -60,6 +80,7 @@ a {
     font-family: "Chakra Petch", sans-serif;
     font-size: 55px;
     font-weight: 800;
+    text-align: center;
 }
 
 p {
@@ -86,6 +107,8 @@ p {
     font-size: 20px;
 }
 
+/*SEÇÃO DE HISTÓRIA DO LAMPEÃO*/
+
 .hist {
     display: flex;
     align-items: center;
@@ -100,4 +123,92 @@ p {
 
 .texto {
     padding: 80px;
+}
+
+/*SEÇÃO DOS SLIDE DE GIGANTES*/
+.sec-slide {
+    display: flex;
+    margin-bottom: 45px;
+}
+
+/*ESTILIZAÇÃO DA SECÃO DE MANDAMENTOS*/
+
+.tituloManda {
+    display: flex;
+    justify-content: space-around;
+    justify-items: center;
+    align-items: center;
+}
+
+.manda {
+    font-family: "Chakra Petch", sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+    color: antiquewhite;
+}
+
+.tit-Manda {
+    text-align: center;
+    padding: 10% 0;
+}
+
+.subTitu {
+    font-family: "Caudex", serif;
+    font-size: 45px;
+    font-weight: 600;
+    color: antiquewhite;
+}
+
+.setinha {
+    justify-content: center;
+    display: flex;
+}
+
+.cards{
+    display: flex;
+    justify-content: space-around;
+    gap: 5%;
+    margin: 25px;
+    margin-top: 62px;
+    font-size: 20px;
+}
+
+.primeiraParte {
+    background-color: #171717;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.primeiraSegunda {
+    background-color: #DDEEDD;
+    text-align: center;
+}
+
+.promessinha {
+    color: #171717;
+}
+
+.numeros {
+    color: antiquewhite;
+}
+
+/*SEÇÃO DEMOCRACIA*/
+.democracia {
+    background-color: #0F0F0F;
+    display: flex;
+    padding: 45px 0;
+    justify-content: center;
+    gap: 25px;
+}
+
+.textoDemo {
+    width: 50%;
+}
+
+.tituDemo {
+    font-family: "Poppins", sans-serif;
+    color: antiquewhite;
+    font-weight: 600;
 }
