--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+    /*Estilos gerais */
+
 body{
    font-family: 'Poppins', sans-serif;
    background-color: #0F0F0F;
@@ -62,33 +65,21 @@ header{
     font-size: 18px;
     font-weight: 500;
 }
+
 .btn-user:hover{
     color: rgb(165, 5, 5);
     transition: 0.3s;
 }
 
-#jogadores{
-    scroll-margin-top: 140px; /* altura do header + folga */
-}
-
-
-.page-title{
-    text-align: center;
-    font-weight: bold;
-    font-size: 22px;
-    color: #ffff;
-    margin-top: 40px;
-}
-
-.card-jogador{
+.card-section{
     width: 100%;
     padding: 30px 0;
 }
+
 .cards-container{
     width: 90%;
     max-width: 1400px;
     margin: 0 auto;
-
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap: 28px;
@@ -98,7 +89,8 @@ header{
     position: relative;
     background-color: #121212;
     border-radius: 16px;
-    height: 380px;
+    height: auto;
+    min-height: 380px;
 
     display: flex;
     flex-direction: column;
@@ -109,64 +101,17 @@ header{
     transition: 0.3s;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
 }
+
 .card:hover{
     transform: translateY(-6px);
 }
-.card-info{
-    margin-top: auto;
-    padding-top: 4px;
 
+.page-title{
     text-align: center;
+    font-weight: bold;
+    font-size: 22px;
     color: #ffff;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 150px;
-}
-
-.card-info h3{
-    margin: 10px 0 4px;
-    font-size: 18px;
-    font-weight: 600;
-}
-.card-info p{
-    margin: 0 0 12px;
-    font-size: 14px;
-    color: #bdbdbd;
-}
-.card-img {
-    height: 270px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: scale(1.05);
-}
-.card-img img {
-    max-height: 100%;
-    width: auto;
-    object-fit: contain;
-}
-
-.btn-avaliar{
-    background-color: #a50505;
-    border: none;
-    border-radius: 6px;
-    padding: 8px 20px;
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
-    transition: 0.3s;
-    opacity: 0;
-    transform: translateY(6px);
-}
-.card:hover .btn-avaliar{
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.btn-avaliar:hover{
-    background-color: #d40707;
+    margin-top: 40px;
 }
 
 .btn-user{
@@ -238,7 +183,6 @@ header{
     color: #a50505;
 }
 
-
 .footer{
     background-color: #121212;
     color: #bdbdbd;
@@ -247,45 +191,7 @@ header{
     font-size: 14px;
     margin-top: 60px;
 }
+
 .footer p{
     margin: 0;
 }
-
-.estrelas.escondido {
-    display: none;
-}
-
-.estrelas {
-    margin-top: 8px;
-    font-size: 18px;
-    cursor: pointer;
-
-    display: flex;
-    gap: 6px;
-
-    background: none;
-    padding: 0;
-    border-radius: 10px;
-
-    box-shadow: none;
-    z-index: 10;
-}
-.estrelas span {
-    transition: 0.2s;
-    opacity: 0.5;
-}
-
-.estrelas span:hover {
-    opacity: 1;
-    transform: scale(1.1);
-}
-
-.resultado {
-    font-size: 13px;
-    font-weight: 600;
-    color: #fff;
-    border-radius: 8px;
-    display: none;
-
-}
-
